--- a/index.html
+++ b/index.html
@@ -3,14 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.7.1.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Sunil-Lore/getcss-lite@getcss-light-0.1.0-alpha-02/dist/css/getcss-lite.min.css" /> 
+    <link href="https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap" rel="stylesheet">
     <title>Random Quote Generator</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="quote-box">
-        <p id="quote"></p>
-        <button id="new-quote">New Quote</button>
+    <div class="container-fluid">
+        <nav>
+            <a href="https://sunil-lore.github.io/">Home</a>
+        </nav>
+        <main class="fx-perfect-center">
+            <div id="quote-box">
+                <p id="quote" class="txt-center"></p>
+                <button id="new-quote">New Quote</button>
+            </div>
+        </main>
+        <footer>
+            <p class="txt-center">
+                <a href="https://sunil-lore.github.io/">&copy;sunil-lore.github.io</a>
+            </p>
+        </footer>
     </div>
     <script src="js/index.js"></script>
 </body>
 </html>
+
